--- a/frontend/style.css
+++ b/frontend/style.css
@@ -45,7 +45,7 @@ body {
   background-color: #6da7e0;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: end;
 }
 
 .navbar-inner {
